--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,6 @@ x509.genkey
 arch/*/configs/vendor/*-gki_defconfig
 arch/*/configs/vendor/*-qgki_defconfig
 arch/*/configs/vendor/*-qgki-debug_defconfig
+
+# vendor device tree directories
+arch/arm64/boot/dts/vendor/
